sort.pancake.BubblePancake.scala.error
Compilation error:
BubblePancake:23: error: '(' expected but identifier found.
      if !plusPetit(x) {
         ^BubblePancake:29: error: illegal start of simple expression
    }
    ^